--- a/_includes/themes/midnight/default.html
+++ b/_includes/themes/midnight/default.html
@@ -18,8 +18,10 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="{{ ASSET_PATH }}/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/css/styles.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/pygment_trac.css" rel="stylesheet" type="text/css" media="all">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/respond.js"></script>
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
