--- a/_includes/themes/midnight/page.html
+++ b/_includes/themes/midnight/page.html
@@ -1,9 +1,9 @@
-<div class="page-header">
+<div id="header">
   <h1>{{ page.title }} <small>Supporting tagline</small></h1>
 </div>
 
-<div class="row">
-  <div class="span12">
+<div class="wrapper">
+  <section>
     {{ content }}
-  </div>
+  </section>
 </div>
