--- a/assets/themes/midnight/css/normalize.css
+++ b/assets/themes/midnight/css/normalize.css
@@ -259,7 +259,7 @@ ul {
 }
 
 /*
- * Corrects list images handled incorrectly in IE7
+ * Corrects list img handled incorrectly in IE7
  */
 nav ul,
 nav ol {
