--- a/assets/themes/midnight/css/normalize.scss
+++ b/assets/themes/midnight/css/normalize.scss
@@ -288,7 +288,7 @@ ul {
 }
 
 /*
- * Corrects list images handled incorrectly in IE7
+ * Corrects list img handled incorrectly in IE7
  */
 
 nav ul,
