--- a/_includes/themes/midnight/page.html
+++ b/_includes/themes/midnight/page.html
@@ -1,11 +1,11 @@
 <div class="wrapper">
   <section>
     <div id="title">
-      <h1>{{ title }}</h1>
+      <h1>{{ page.title }}</h1>
       <p>Design for the web to succeed and you too will succeed. </p>
       <hr>
-      <span class="credits left">Link here: <a href="{{ url }}">{{ url }}</a></span>
-      <span class="credits right">Last updated: {{ date }}</span>
+      <span class="credits left">Link here: <a href="{{ url }}">{{ page.url }}</a></span>
+      <span class="credits right">Last updated: {{ page.date }}</span>
     </div>
     {{ content }}
   </section>
