--- a/_includes/themes/midnight/page.html
+++ b/_includes/themes/midnight/page.html
@@ -4,7 +4,7 @@
       <h1>{{ page.title }}</h1>
       <p>Design for the web to succeed and you too will succeed. </p>
       <hr>
-      <span class="credits left">Written by: <a href="{{ author.github }}">{{ author.name }}</a></span>
+      <span class="credits left">Written by: <a href="{{ author.github }}">{{ site.author.name }}</a></span>
       <span class="credits right">Last updated: {{ page.date }}</span>
     </div>
     {{ content }}
