--- a/_includes/themes/midnight/default.html
+++ b/_includes/themes/midnight/default.html
@@ -31,7 +31,7 @@
 
     <div id="header">
       <nav>
-        <li class="fork"><a href="{{ HOME_PATH }}">{{ site.title }}</a></li>
+        <li><a href="{{ HOME_PATH }}">{{ site.title }}</a></li>
         {% assign pages_list = site.pages %}
         {% assign group = 'navigation' %}
         {% include JB/pages_list %}
