--- a/_includes/themes/midnight/default.html
+++ b/_includes/themes/midnight/default.html
@@ -30,8 +30,8 @@
   <body>
 
     <div id="header">
-      <h1><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1>
       <nav>
+        <h1>{{ site.title }}</h1>
         {% assign pages_list = site.pages %}
         {% assign group = 'navigation' %}
         {% include JB/pages_list %}
