--- a/_includes/themes/midnight/default.html
+++ b/_includes/themes/midnight/default.html
@@ -31,7 +31,7 @@
 
     <div id="header">
       <nav>
-        <h1>{{ site.title }}</h1>
+        <li><h1>{{ site.title }}</h1></li>
         {% assign pages_list = site.pages %}
         {% assign group = 'navigation' %}
         {% include JB/pages_list %}
