--- a/_includes/themes/midnight/page.html
+++ b/_includes/themes/midnight/page.html
@@ -2,8 +2,7 @@
   <section>
     <div id="title">
       <h1>{{ page.title }}</h1>
-      <p>Design for the web to succeed and you too will succeed. </p>
-      <hr>
+      {% if page.description %}<p>"{{ page.description }}"</p>{% endif %}
       <span class="credits left">Written by: <a href="{{ author.github }}">{{ site.author.name }}</a></span>
       <span class="credits right">Last updated: {{ page.date }}</span>
     </div>
