--- a/_includes/themes/midnight/default.html
+++ b/_includes/themes/midnight/default.html
@@ -25,14 +25,14 @@
     <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
   -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
 
   <body>
 
     <div id="header">
       <nav>
-        <li><h1>{{ site.title }}</h1></li>
+        <h1><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1>
         {% assign pages_list = site.pages %}
         {% assign group = 'navigation' %}
         {% include JB/pages_list %}
