--- a/_includes/themes/midnight/default.html
+++ b/_includes/themes/midnight/default.html
@@ -32,7 +32,7 @@
 
     <div id="header">
       <nav>
-        <h1><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1>
+        <li class="title"><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1></li>
         {% assign pages_list = site.pages %}
         {% assign group = 'navigation' %}
         {% include JB/pages_list %}
