--- a/assets/themes/midnight/css/styles.css
+++ b/assets/themes/midnight/css/styles.css
@@ -764,16 +764,55 @@ dt {
   -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
 }
+#header nav li {
+  float: right;
+  font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  list-style: none;
+  display: inline;
+  color: white;
+  line-height: 50px;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+}
+#header nav li.title a {
+  color: white;
+  border: 0;
+  background: clear;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background-color: transparent;
+  padding: 14px 12px;
+  margin-top: 6px;
+  line-height: 14px;
+  font-size: 14px;
+  display: inline-block;
+  text-align: center;
+}
+#header nav li.title a:hover {
+  background: transparent;
+  background-color: transparent;
+  border: 0;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
 #header nav li.fork {
   float: left;
-  margin-left: 0px;
+  margin-left: 0;
 }
 #header nav li.downloads {
   float: right;
   margin-left: 6px;
 }
 #header nav li.title {
-  float: right;
+  float: left;
   margin-right: 10px;
   font-size: 21px;
 }
