--- a/assets/themes/midnight/css/styles.css
+++ b/assets/themes/midnight/css/styles.css
@@ -778,15 +778,20 @@ dt {
 #header nav li.title a {
   color: white;
   border: 0;
-  background: clear;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  background: transparent;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, transparent), color-stop(100%, transparent));
+  background: -webkit-linear-gradient(transparent, transparent);
+  background: -moz-linear-gradient(transparent, transparent);
+  background: -o-linear-gradient(transparent, transparent);
+  background: linear-gradient(transparent, transparent);
   background-color: transparent;
   padding: 14px 12px;
   margin-top: 6px;
