--- a/assets/themes/midnight/css/styles.css
+++ b/assets/themes/midnight/css/styles.css
@@ -747,6 +747,7 @@ dt {
   background-color: #93bd20;
   padding: 10px 12px;
   margin-top: 6px;
+  margin-right: 10px;
   line-height: 14px;
   font-size: 14px;
   display: inline-block;
