--- a/_includes/themes/midnight/page.html
+++ b/_includes/themes/midnight/page.html
@@ -2,7 +2,7 @@
   <section>
     <div id="title">
       <h1>{{ page.title }}</h1>
-      {% if page.excerpt %}<p>"{{ page.excerpt }}"</p>{% endif %}
+      {% if page.subtitle %}<p>"{{ page.subtitle }}"</p>{% endif %}
       <br><hr>
       <span class="credits left">Written by: <a href="{{ author.github }}">{{ site.author.name }}</a></span>
       <span class="credits right">Last updated: {{ page.date }}</span>
