--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -10,7 +10,7 @@
     {{ content }}
     <hr>
     <div class="pagination">
-      <ul>
+      <nav>
       {% if page.previous %}
         <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
       {% else %}
@@ -22,7 +22,7 @@
       {% else %}
         <li class="next disabled"><a>Next &rarr;</a>
       {% endif %}
-      </ul>
+      </nav>
     </div>
   </section>
   <section>
