--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -9,19 +9,24 @@
     </div>
     {{ content }}
     <hr>
-    <div class="pagination">
-      <nav>
-      {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
-      {% else %}
-        <li class="prev disabled"><a>&larr; Previous</a></li>
-      {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
-      {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
-      {% else %}
-        <li class="next disabled"><a>Next &rarr;</a>
-      {% endif %}
+    <div>
+      <span class="left">
+        {% if page.previous %}
+          <a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a>
+        {% else %}
+          <a>&larr; Previous</a>
+        {% endif %}
+      </span>
+      <span>
+        <a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
+      </span>
+      <span class="right">
+        {% if page.next %}
+          <a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a>
+        {% else %}
+          <a>Next &rarr;</a>
+        {% endif %}
+      </span>
       </nav>
     </div>
   </section>
