--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -20,7 +20,7 @@
       <span>
         <a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
       </span>
-      <span style-"float: right;">
+      <span style="float: right;">
         {% if page.next %}
           <a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a>
         {% else %}
