--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -29,16 +29,16 @@
       </span>
       </nav>
     </div>
-    <h4>Published</h4>
-    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
-
-    {% unless page.tags == empty %}
-      <h4>Tags</h4>
-      <ul class="tag_box">
-      {% assign tags_list = page.tags %}
-      {% include JB/tags_list %}
-      </ul>
-    {% endunless %}
+    <div style="text-align: center;">
+      <span class="credits right">
+              {% unless page.tags == empty %}
+        <ul style="display: inline;">
+        {% assign tags_list = page.tags %}
+        {% include JB/tags_list %}
+        </ul>
+      {% endunless %}
+      </span>
+    </div>
   </section>
   <section>
     {% include JB/comments %}
