--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -32,7 +32,7 @@
     <div style="text-align: center;">
       <span class="credits right">
               {% unless page.tags == empty %}
-        <ul style="display: inline;">
+        <ul style="display: inline-block;">
         {% assign tags_list = page.tags %}
         {% include JB/tags_list %}
         </ul>
