--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -29,7 +29,7 @@
       </span>
       </nav>
     </div>
-    <div style="text-align: center;">
+    <div>
       <span class="credits right">
               {% unless page.tags == empty %}
         <ul style="display: inline-block;">
