--- a/assets/themes/midnight/css/styles.css
+++ b/assets/themes/midnight/css/styles.css
@@ -819,6 +819,10 @@ dt {
   margin-right: 10px;
 }
 
+#tags li {
+  display: inline;
+}
+
 section {
   max-width: 650px;
   padding: 30px 0px 50px 0px;
