--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -31,6 +31,7 @@
     </div>
     <div id="tags">
       {% unless page.tags == empty %}
+      Tags: 
         <ul>
         {% assign tags_list = page.tags %}
         {% include JB/tags_list %}
