--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -32,7 +32,7 @@
     <div id="tags">
       {% unless page.tags == empty %}
       Tags: 
-        <ul>
+        <ul style="display: inline;">
         {% assign tags_list = page.tags %}
         {% include JB/tags_list %}
         </ul>
