--- a/_includes/themes/midnight/post.html
+++ b/_includes/themes/midnight/post.html
@@ -33,7 +33,7 @@
       <br>
       {% unless page.tags == empty %}
         Tags: 
-        <ul style="display: inline;">
+        <ul style="display: inline; padding-left: 10px;">
         {% assign tags_list = page.tags %}
         {% include JB/tags_list %}
         </ul>
